--- a/python_1/unit_1/prog_datasci_1b.ipynb
+++ b/python_1/unit_1/prog_datasci_1b.ipynb
@@ -1,1 +1,52 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"prog_datasci_1b.ipynb","provenance":[],"collapsed_sections":[],"authorship_tag":"ABX9TyO4QZN8qzLeMQO6J0YfWgoB"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","source":["from google.colab import drive\n","drive.mount('/content/drive')"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"Lm-FADF9FAw4","executionInfo":{"status":"ok","timestamp":1658749899036,"user_tz":-120,"elapsed":4135,"user":{"displayName":"Joan Maynou Fernandez","userId":"14873969183838549481"}},"outputId":"65c4c949-0ab8-4122-ada2-f1ad7f914163"},"execution_count":2,"outputs":[{"output_type":"stream","name":"stdout","text":["Mounted at /content/drive\n"]}]},{"cell_type":"code","source":["%cd /content/drive/MyDrive/Colab_Notebooks/prog_datasci_1"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"DY5iDBziFWv5","executionInfo":{"status":"ok","timestamp":1658749902678,"user_tz":-120,"elapsed":874,"user":{"displayName":"Joan Maynou Fernandez","userId":"14873969183838549481"}},"outputId":"1140a9c2-6fea-462d-c7bf-4e55847e9cbb"},"execution_count":3,"outputs":[{"output_type":"stream","name":"stdout","text":["/content/drive/MyDrive/Colab_Notebooks/prog_datasci_1\n"]}]},{"cell_type":"code","execution_count":4,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"fhxGoH0rEqIM","executionInfo":{"status":"ok","timestamp":1658749913612,"user_tz":-120,"elapsed":5391,"user":{"displayName":"Joan Maynou Fernandez","userId":"14873969183838549481"}},"outputId":"3304b225-743c-422a-dd8e-00a63b32c7be"},"outputs":[{"output_type":"stream","name":"stdout","text":["Introduce tu DNI o NIE (sin letra):12345678\n","Archivo prog_datasci_1.txt generado\n"]}],"source":["import hashlib\n","\n","seed = 'Programacion Python para Data Science'\n","\n","if __name__ == \"__main__\":\n","    try:\n","        dni = input('Introduce tu DNI o NIE (sin letra):')\n","    except ValueError:\n","        raise SystemExit('Error al introducir el DNI')\n","\n","    digest = hashlib.sha224(('.'.join(seed.split())+dni).encode('utf-8')).hexdigest()\n","    with open('prog_datasci_1.txt', 'w') as output:\n","        output.write(\"%s %s\\n\" % (dni, digest))\n","        print('Archivo prog_datasci_1.txt generado')"]}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /content/drive/MyDrive/Colab_Notebooks/prog_datasci_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "\n",
+    "seed = 'Programacion Python para Data Science'\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    try:\n",
+    "        dni = input('Introduce tu DNI o NIE (sin letra):')\n",
+    "    except ValueError:\n",
+    "        raise SystemExit('Error al introducir el DNI')\n",
+    "\n",
+    "    digest = hashlib.sha224(('.'.join(seed.split())+dni).encode('utf-8')).hexdigest()\n",
+    "    with open('prog_datasci_1.txt', 'w') as output:\n",
+    "        output.write(\"%s %s\\n\" % (dni, digest))\n",
+    "        print('Archivo prog_datasci_1.txt generado')"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
